<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8D8D8"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:background="@drawable/button_background"
        android:onClick="stopwatchReset"
        android:text="@string/reset"
        android:textColor="@color/button_text_color"
        android:textSize="@dimen/large_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <!--
        <TextView
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:textSize="@dimen/chronometer_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textSize="@dimen/chronometer_text_size" />

        <TextView
            android:id="@+id/minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:textSize="@dimen/chronometer_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textSize="@dimen/chronometer_text_size" />
        -->

        <TextView
            android:id="@+id/seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:textSize="@dimen/timer_text_size" />

        <TextView
            android:id="@+id/miliseconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="000"
            android:textSize="@dimen/timer_text_size_small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/margin"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:onClick="stopwatchStart"
            android:text="@string/start"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/large_text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:onClick="stopwatchStop"
            android:text="@string/stop"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/large_text" />
    </LinearLayout>

</LinearLayout>